--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 ul {
   list-style-type: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -24,6 +24,12 @@ a {
   flex-direction: column;
   align-items: center;
 }
+
 .form-control {
   width: 300px;
+}
+
+.makeTwoColumn {
+  display: flex;
+  justify-content: space-around;
 }
