--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ a {
 
 .center {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
 }
@@ -32,4 +33,10 @@ a {
 .makeTwoColumn {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.flexMarginBottom {
+  gap: 10px;
+  padding: 20px;
 }
