--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@ ul {
 .menu {
   display: flex;
   justify-content: space-between;
-  gap: 30px;
+  align-items: center;
+  gap: 40px;
 }
 
 a {
@@ -40,4 +41,10 @@ a {
 .flexMarginBottom {
   gap: 10px;
   padding: 20px;
+}
+
+@media screen and (max-width: 415px) {
+  ul {
+    flex-direction: column;
+  }
 }
